src/ui/chat/snapshots/swamp__ui__chat__screens__interrupt_notice_100.snap
---
source: src/ui/chat/screens.rs
expression: "committed(interrupt, 100)"
---
⊘ interrupted · 2 workers still running (esc again within 2s to cancel them)
