src/ui/chat/snapshots/swamp__ui__chat__screens__slash_help_100.snap
---
source: src/ui/chat/screens.rs
expression: "committed(help, 100)"
---
> /help
commands
/help                     commands and keyboard shortcuts
/status                   the run tree, same output as swamp trace
/accounts                 the account pool, health and spend
/usage [--json]           per-account tokens and quota windows
/trace [node|dispatch]    the run tree with its events
/dispatches [--failed]    one row per dispatch: tasks, states, cost
/cost                     tokens and spend for this run
/tier [low|mid|high]      show or set the default dispatch tier
/cancel <node|all>        stop one worker or all of them
/diff <node>              the stat of a worker's captured patch
/thinking [on|off]        show or hide the brain's thinking
/clear                    clear the screen, keep the conversation
/resume <run|last>        the command that reopens a run
/quit                     leave the chat

?                 key list (chat: on an empty input)
ctrl+c            quit (chat: clear the input, again to leave)
ctrl+d            quit
enter             send; with the popup open, complete the command
alt+enter shift+enter \ enter  newline (shift+enter needs the kitty keyboard protocol)
esc               close the popup, else interrupt the turn
esc esc           cancel every running worker, within 2 s of the first esc
ctrl+l            clear the screen; the scrollback above is untouched
ctrl+o            expand the last collapsed result or dispatch block
↑ ↓               history on an empty input, else move between lines
/                 command popup; tab completes, ↑↓ chooses
ctrl+a ctrl+e ctrl+k ctrl+u ctrl+w alt+← alt+→  readline editing
