src/ui/chat/snapshots/swamp__ui__chat__screens__status_40.snap
---
source: src/ui/chat/screens.rs
expression: "status(&mut app, 40)"
---
  ? for shortcuts  2 running · 1 stuck
