src/ui/chat/snapshots/swamp__ui__chat__screens__status_62.snap
---
source: src/ui/chat/screens.rs
expression: "status(&mut app, 62)"
---
  ? for shortcuts    2 running · 1 stuck · 1 queued · ~$0.43
