src/ui/chat/snapshots/swamp__ui__chat__screens__status_idle_100.snap
---
source: src/ui/chat/screens.rs
expression: "status(&mut idle, 100)"
---
  ? for shortcuts                     ⏵⏵ dispatch mid                   run 9g5fav · idle · ~$0.00
