src/ui/chat/snapshots/swamp__ui__chat__screens__streaming_live_100.snap
---
source: src/ui/chat/screens.rs
expression: "live(&mut app, 100)"
---
  Reading the handler now█

· Dredging… (esc to interrupt · 0s · ↓ 81 tokens)
────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────
  ? for shortcuts                   ⏵⏵ dispatch mid                   run 9g5fav · 1 turn · ~$0.00
