src/ui/chat/snapshots/swamp__ui__chat__screens__streaming_live_62.snap
---
source: src/ui/chat/screens.rs
expression: "live(&mut app, 62)"
---
  Reading the handler now█

· Dredging… (esc to interrupt · 0s · ↓ 81 tokens)
──────────────────────────────────────────────────────────────
>
──────────────────────────────────────────────────────────────
  ? for shortcuts                        run 9g5fav · 1 turn
